# linux_development

./: README.md
01_TerminalProject/: Makefile  Show.c
02_Multifile/: Makefile
03_Text/: randomize.sh
04_Debugging/: Makefile  range.c
04_Debugging/scenarios/: scenario1.gdb  scenario2.gdb
05_Regexps/: Makefile  esub.c
06_Tracing/: Makefile  move.c  remove.c
07_Environmental/: Makefile.am  configure.ac  rhasher.c
08_I18n/: Makefile.am  akinator.c  configure.ac  ru.po
09_PatchDiff/: Makefile  amazing0.c  amazing1.patch  amazing2.patch  amazing3.patch
10_LibTesting/: Makefile.am  configure.ac
10_LibTesting/src/: Makefile.am
10_LibTesting/tests/: Makefile.am  tests.ts
11_Documenting/: Makefile.am  akinator.c  configure.ac  ru.po
12_InstallPackaging/: Makefile.am  README.md  akinator.c  akinator.h  configure.ac  main.c  ru.po  tests.c
